--- a/WordPress/Classes/ViewRelated/Me/MyProfileHeaderView.xib
+++ b/WordPress/Classes/ViewRelated/Me/MyProfileHeaderView.xib
@@ -6,54 +6,54 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MyProfileHeaderView" customModule="WordPress" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyProfileHeaderViewCell" rowHeight="140" id="fcx-xK-EJj" customClass="MyProfileHeaderView" customModule="WordPress" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="134"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="5Te-sl-4HZ">
-                    <rect key="frame" x="20" y="20" width="335" height="94"/>
-                    <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gravatar" translatesAutoresizingMaskIntoConstraints="NO" id="Sgx-sT-G82" customClass="CircularImageView" customModule="WordPress" customModuleProvider="target">
-                            <rect key="frame" x="135.5" y="0.0" width="64" height="64"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="64" id="mFM-Wn-9HA"/>
-                                <constraint firstAttribute="width" constant="64" id="pwi-AC-YZf"/>
-                            </constraints>
-                        </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hfE-Wp-Ea1">
-                            <rect key="frame" x="127.5" y="74" width="80" height="20"/>
-                            <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
-                            <state key="normal" title="Button text">
-                                <color key="titleColor" red="0.0" green="0.52941176470588236" blue="0.74509803921568629" alpha="1" colorSpace="calibratedRGB"/>
-                            </state>
-                            <connections>
-                                <action selector="onProfileWasPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="HcL-ZO-4NF"/>
-                            </connections>
-                        </button>
-                    </subviews>
-                </stackView>
-            </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <constraints>
-                <constraint firstItem="5Te-sl-4HZ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="PUW-Xb-NsG"/>
-                <constraint firstItem="5Te-sl-4HZ" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="20" id="PaJ-ah-Z6K"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="5Te-sl-4HZ" secondAttribute="trailing" constant="20" id="SDV-Yd-CDk"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="5Te-sl-4HZ" secondAttribute="bottom" constant="20" id="fHK-qN-mz9"/>
-            </constraints>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fcx-xK-EJj" id="YeK-MX-Gye">
+                <rect key="frame" x="0.0" y="0.0" width="375" height="133.5"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="5Te-sl-4HZ">
+                        <rect key="frame" x="20" y="20" width="335" height="93.5"/>
+                        <subviews>
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gravatar" translatesAutoresizingMaskIntoConstraints="NO" id="Sgx-sT-G82" customClass="CircularImageView" customModule="WordPress" customModuleProvider="target">
+                                <rect key="frame" x="135.5" y="0.0" width="64" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="mFM-Wn-9HA"/>
+                                    <constraint firstAttribute="width" constant="64" id="pwi-AC-YZf"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hfE-Wp-Ea1">
+                                <rect key="frame" x="127.5" y="74" width="80" height="19.5"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
+                                <state key="normal" title="Button text">
+                                    <color key="titleColor" red="0.0" green="0.52941176470588236" blue="0.74509803921568629" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="onProfileWasPressed:" destination="fcx-xK-EJj" eventType="touchUpInside" id="6bg-EF-94L"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                    </stackView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="5Te-sl-4HZ" firstAttribute="top" secondItem="YeK-MX-Gye" secondAttribute="top" constant="20" id="Lqg-vH-EhH"/>
+                    <constraint firstAttribute="bottom" secondItem="5Te-sl-4HZ" secondAttribute="bottom" constant="20" id="Otv-KZ-yq9"/>
+                    <constraint firstItem="5Te-sl-4HZ" firstAttribute="leading" secondItem="YeK-MX-Gye" secondAttribute="leading" constant="20" id="VGH-e9-kV1"/>
+                    <constraint firstAttribute="trailing" secondItem="5Te-sl-4HZ" secondAttribute="trailing" constant="20" id="qlo-F7-vVG"/>
+                </constraints>
+            </tableViewCellContentView>
             <connections>
-                <outlet property="gravatarButton" destination="hfE-Wp-Ea1" id="l4E-cT-bJb"/>
-                <outlet property="gravatarImageView" destination="Sgx-sT-G82" id="e4t-1q-yed"/>
+                <outlet property="gravatarButton" destination="hfE-Wp-Ea1" id="Kld-Tp-PVI"/>
+                <outlet property="gravatarImageView" destination="Sgx-sT-G82" id="xVG-bi-oa8"/>
             </connections>
-            <point key="canvasLocation" x="-140" y="-142"/>
-        </view>
+            <point key="canvasLocation" x="-141" y="73"/>
+        </tableViewCell>
     </objects>
     <resources>
         <image name="gravatar" width="85" height="85"/>
