--- a/WordPress/Classes/ViewRelated/Cells/SiteIconCell.xib
+++ b/WordPress/Classes/ViewRelated/Cells/SiteIconCell.xib
@@ -1,63 +1,18 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SiteIconCell" id="AA3-Gc-UnX" customClass="SiteIconCell" customModule="WordPress" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="134"/>
-            <autoresizingMask key="autoresizingMask"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AA3-Gc-UnX" id="irS-o2-ZFK">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="133.5"/>
-                <autoresizingMask key="autoresizingMask"/>
-                <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="YHw-wV-QOW">
-                        <rect key="frame" x="20" y="20" width="335" height="93.5"/>
-                        <subviews>
-                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blavatar-default" translatesAutoresizingMaskIntoConstraints="NO" id="dg0-cU-Lig" userLabel="blavatar">
-                                <rect key="frame" x="135.5" y="0.0" width="64" height="64"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="64" id="UJ5-rD-p0f"/>
-                                    <constraint firstAttribute="height" constant="64" id="d99-HG-Z2s"/>
-                                </constraints>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c6T-gq-RaY">
-                                <rect key="frame" x="127.5" y="74" width="80" height="19.5"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
-                                <state key="normal" title="Button text">
-                                    <color key="titleColor" red="0.0" green="0.52941176469999995" blue="0.74509803919999995" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="onBlavatarWasPressed:" destination="AA3-Gc-UnX" eventType="touchUpInside" id="BQk-rp-A5R"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                    </stackView>
-                </subviews>
-                <constraints>
-                    <constraint firstItem="YHw-wV-QOW" firstAttribute="centerX" secondItem="irS-o2-ZFK" secondAttribute="centerX" id="1iI-qT-ijM"/>
-                    <constraint firstItem="YHw-wV-QOW" firstAttribute="top" secondItem="irS-o2-ZFK" secondAttribute="top" constant="20" id="AZQ-6h-5s0"/>
-                    <constraint firstItem="YHw-wV-QOW" firstAttribute="centerY" secondItem="irS-o2-ZFK" secondAttribute="centerY" id="Hhn-Zn-lmi"/>
-                    <constraint firstAttribute="trailing" secondItem="YHw-wV-QOW" secondAttribute="trailing" constant="20" id="PiY-gR-8VA"/>
-                    <constraint firstItem="YHw-wV-QOW" firstAttribute="leading" secondItem="irS-o2-ZFK" secondAttribute="leading" constant="20" id="qoP-8A-50M"/>
-                    <constraint firstAttribute="bottom" secondItem="YHw-wV-QOW" secondAttribute="bottom" constant="20" id="vct-sM-5Wf"/>
-                </constraints>
-            </tableViewCellContentView>
-            <connections>
-                <outlet property="blavatarButton" destination="c6T-gq-RaY" id="NzY-l3-kPQ"/>
-                <outlet property="blavatarImageView" destination="dg0-cU-Lig" id="oUA-DK-x6x"/>
-            </connections>
-            <point key="canvasLocation" x="12" y="74"/>
-        </tableViewCell>
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+        </view>
     </objects>
-    <resources>
-        <image name="blavatar-default" width="40" height="40"/>
-    </resources>
 </document>
